# uzi-miner

./: Cargo.toml  README.md
src/: hashrate.rs  main.rs  miner.rs
