[package]
name = "uzi-miner"
version = "0.1.0"
edition = "2021"

[dependencies]
tiny_http = "0.11"
rust-randomx = "0.5.1"
num_cpus = "1.0"
rand = "0.8.5"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3", default-features = false }
ureq = { version = "2.4.0", features = ["json"], default-features = false }
