[package]
name = "uzi-miner"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-randomx = "0.6.0"
num_cpus = "1.0"
rand = "0.8.5"
hex = "0.4.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3", default-features = false }
ureq = { version = "2.6.2", features = ["json"], default-features = false }
colored = "2.0.0"
log = "0.4"
env_logger = "0.9.0"
